--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,9 @@
 :root {
-    
+    --azul: #263d79;
+    --verde: #80a605;
+    --amarillo: #f6cb04;
+    --negro: #444444;
+    --blanco: #fff;
 }
 
 html {
@@ -13,15 +17,13 @@ html {
 }
 
 body {
-    --font-family2: 'Fraunces', serif;
-    font-family: 'Barlow', sans-serif;
-    font-weight: 600;
-    line-height: 1.5;
+    
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    line-height: 1.6;
     font-size: 18px;
-    color: var(--white);
+    color: var(--blanco);
     scroll-behavior: smooth;
-    max-width: 90rem;
-    margin-inline: auto;
 }
 
 img {
@@ -33,9 +35,133 @@ ol {
   list-style: none;
 }
 
+.container {
+    max-width: 1440px;
+    margin-inline: auto;
+    padding: 10px 5px;
+}
+
 a,
 a:hover,
 a:visited {
     color: inherit;
     text-decoration: none;
+}
+
+i {
+    font-size: 1.5rem;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.justify-content-between {
+    justify-content: space-between;
+}
+
+.align-center {
+    align-items: center;
+}
+
+/* Top header */
+
+.top-header {
+    background-color: var(--azul);
+}
+
+.redes-sociales {
+    max-width: 200px;
+    display: flex;
+    gap: 15px;
+}
+
+.icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: var(--blanco);
+    width: 40px;
+    height: 40px;
+}
+
+.icon-container i {
+    color: var(--azul);
+}
+
+.top-cta, .top-cta > *{
+    display: flex;
+    align-items: center;
+}
+
+.top-cta {
+    gap: 30px;
+}
+
+.top-cta > * {
+    gap: 10px;
+}
+
+
+/* Main header */
+
+.main-header {
+}
+
+.site-logo {
+    display: flex;
+    margin-left: -8px;
+}
+
+.transparencia {
+    display: flex;
+    gap: 15px;
+
+}
+
+.transparencia-btn {
+    position: relative;
+    display: flex;
+    align-items: center;
+    border: 4px solid #DCDCDC;
+    background-color: var(--negro);
+    padding: 0.725rem 2rem;
+    gap: 20px;
+    width: 310px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.transparencia-btn::after {
+    top: 0;
+    right: 0%;
+    content:" ";
+    background: #EB3C46;
+    height:10%;
+    position:absolute;
+    width:10%;
+}
+
+.transparencia-btn::before {
+    top: 0;
+    right: 10%;
+    content:" ";
+    background: #0F69B4;
+    height:10%;
+    position:absolute;
+    width:10%;
+}
+
+.btn-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.btn-text span:first-of-type {
+    font-size: 14px;
+}
+
+.btn-text span:last-child {
+    font-weight: 600;
 }
